[package]
name = "rknn-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
rknn_api-sys = {path="../rknn_api-sys"}
